--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Gabriel Goethe">
+    <meta name="keywords" content="real, state, apartamentos, casas, arriendo, canon, apartments, finca, raiz">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site built in react that list properties availabes in Bogota, and metropolitan area"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Aptuno Frontend Test</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
