Updated readme file

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="real, state, apartamentos, casas, arriendo, canon, apartments, finca, raiz">
     <meta
       name="description"
-      content="Web site built in react that list properties availabes in Bogota, and metropolitan area"
+      content="Web site built in react/redux that list properties availabes near Bogota, and metropolitan area"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Aptuno Frontend Test</title>
+    <title>Real State App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
